First implementation of Deck and tox py32 fix for linux

--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,13 @@ deps =
 commands =
     py.test --basetemp={envtmpdir} --durations=1
 
+
+[testenv:py32]
+deps =
+    nose
+commands =
+    nosetests
+
 [testenv:style]
 basepython=python
 deps=pylint
