Modification to style checkers and conformity.

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,6 @@ deps =
 commands =
     py.test --basetemp={envtmpdir} --durations=1
 
-
 [testenv:py32]
 deps =
     nose
@@ -17,6 +16,9 @@ commands =
 
 [testenv:style]
 basepython=python
-deps=pylint
+deps=
+        pylint
+        flake8
 commands=
-    pylint --rcfile=.pylintrc librarian
+        flake8 librarian
+        pylint librarian
