Added sphinx documentation

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    py26, py27, py33, pypy, style
+    py26, py27, py33, pypy, docs, style
 
 [testenv]
 deps =
@@ -22,3 +22,10 @@ deps=
 commands=
         flake8 librarian
         pylint librarian
+
+[testenv:docs]
+basepython=python
+changedir=doc
+deps=sphinx
+commands=
+    sphinx-build -W -b html -d {toxinidir}/docs/_build/doctrees {toxinidir}/docs {toxinidir}/docs/_build/html
