Adapted unittests to new card save/load system with some fixes to pass

--- a/tox.ini
+++ b/tox.ini
@@ -1,18 +1,12 @@
 [tox]
 envlist =
-    py26, py27, py33, pypy, docs, style
+    py26, py27, py33, style
 
 [testenv]
 deps =
     pytest
 commands =
     py.test --basetemp={envtmpdir} --durations=1
-
-[testenv:py32]
-deps =
-    nose
-commands =
-    nosetests
 
 [testenv:style]
 basepython=python
@@ -22,10 +16,3 @@ deps=
 commands=
         flake8 librarian
         pylint librarian
-
-[testenv:docs]
-basepython=python
-changedir=doc
-deps=sphinx
-commands=
-    sphinx-build -W -b html -d {toxinidir}/docs/_build/doctrees {toxinidir}/docs {toxinidir}/docs/_build/html
