Move style checker to python2

--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ commands =
     py.test --basetemp={envtmpdir} --durations=1
 
 [testenv:style]
-basepython=python
+basepython=python2
 deps=
         pylint
         flake8
