Added 'six' dependency to better support py2 and py3

--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,7 @@ envlist =
 
 [testenv]
 deps =
+    six
     pytest
 commands =
     py.test --basetemp={envtmpdir} --durations=1
@@ -11,8 +12,9 @@ commands =
 [testenv:style]
 basepython=python2
 deps=
-        pylint
-        flake8
+    six
+    pylint
+    flake8
 commands=
-        flake8 librarian
-        pylint --rcfile=.pylintrc librarian
+    flake8 librarian
+    pylint --rcfile=.pylintrc librarian
