--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 *.py[cod]
 
 # C extensions
@@ -8,7 +7,6 @@
 *.egg
 *.egg-info
 dist
-_build
 build
 eggs
 parts
@@ -19,7 +17,6 @@ develop-eggs
 .installed.cfg
 lib
 lib64
-__pycache__
 
 # Installer logs
 pip-log.txt
@@ -33,14 +30,13 @@ nosetests.xml
 *.mo
 
 # Mr Developer
-*.e4p
-*.e5p
-.eric4project
-.eric5project
-.ropeproject
-*.nja
-*.eproject
 .mr.developer.cfg
 .project
 .pydevproject
-.#*
+
+# Complexity
+output/*.html
+output/*/index.html
+
+# Sphinx
+docs/_build
