--- a/tox.ini
+++ b/tox.ini
@@ -1,20 +1,27 @@
 [tox]
-envlist =
-    py26, py27, py33, style
+envlist = py26, py27, py33, style, docs
 
 [testenv]
+setenv =
+    PYTHONPATH = {toxinidir}:{toxinidir}/librarian
 deps =
-    six
+    -r{toxinidir}/requirements.txt
     pytest
 commands =
-    py.test --basetemp={envtmpdir} --durations=1
+    py.test --basetemp={envtmpdir}
 
 [testenv:style]
-basepython=python2
-deps=
-    six
-    pylint
+deps =
+    -r{toxinidir}/requirements.txt
     flake8
-commands=
-    flake8 librarian
-    pylint --rcfile=.pylintrc librarian
+commands =
+    python setup.py flake8
+    
+[testenv:docs]
+changedir=docs/
+deps =
+    -r{toxinidir}/requirements.txt
+    sphinx
+commands =
+    sphinx-build -b linkcheck ./ _build/
+    sphinx-build -b html ./ _build/
