Added junit xml output to py.test command

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ deps =
     -r{toxinidir}/requirements.txt
     pytest
 commands =
-    py.test --basetemp={envtmpdir}
+    py.test --junit-xml junit-{envname}.xml --basetemp={envtmpdir}
 
 [testenv:style]
 deps =
