Added pytest setup to tox docs testing

--- a/tox.ini
+++ b/tox.ini
@@ -18,10 +18,11 @@ commands =
     python setup.py flake8
     
 [testenv:docs]
+basepython=python
 changedir=docs/
 deps =
     -r{toxinidir}/requirements.txt
     sphinx
+    pytest
 commands =
-    sphinx-build -b linkcheck ./ _build/
-    sphinx-build -b html ./ _build/
+    py.test --tb=line -v --junitxml=junit-{envname}.xml check_sphinx.py
