fix tox docs to use correct test module

--- a/tox.ini
+++ b/tox.ini
@@ -25,4 +25,4 @@ deps =
     sphinx
     pytest
 commands =
-    py.test --tb=line -v --junitxml=junit-{envname}.xml check_sphinx.py
+    py.test --tb=line -v --junitxml=junit-{envname}.xml doccheck.py
